<resources>
    <string name="app_name">fADI</string>
    <string name="edtName">Имя пользователя</string>
    <string name="edtPass">Пароль</string>
    <string name="edtEmail">Email</string>
    <string name="sing_up">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="sing_in">Войти</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
